# temperature-sensor

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  millis.rs  seven_segment_display.rs
